# ESIMarket_Tool

./: .gitignore  AGENTS.md  CLAUDE.md  ESI_OAUTH_FLOW.py  MarketStructures8.py  README  README.md  cache.py  cli.py  config.py  config.toml  config.toml.example  env.bak  esi_client.py  esi_markets.py  example_downloader.py  export.py  file_cleanup.py  get_jita_prices.py  googlesheets_updater.py  gsheets_updater.py  logging_utils.py  main.py  market_data.py  progress_display.py  pyproject.toml  rate_limiter.py  requirements.txt  setup.py
data/: type_ids.csv
docs/: CODE_REVIEW.md  ESIcache-UIenhancements.md  SCHEDULING.md  progress_display_issue.md  refactoring_log.md
output/latest/: jita_prices.csv
tests/: conftest.py  test_cache.py  test_esi_client_cache.py
