[project]
name = "esimarket-tool"
version = "0.2.0"
description = "ESI Structure Market Tools for Eve Online"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gspread>=6.2.1",
    "numpy>=2.2",
    "oauthlib>=3.2",
    "pandas>=2.2",
    "python-dotenv>=1.0",
    "requests>=2.32",
    "requests-oauthlib>=2.0",
    "rich>=13.7",
]

[project.scripts]
mktstatus = "esi_markets:main"
setup-esi = "setup:main"
