[project]
name = "esimarket-tool"
version = "0.2.0"
description = "ESI Structure Market Tools for Eve Online"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "gspread>=6.2.1",
    "numpy>=2.2",
    "oauthlib>=3.2",
    "pandas>=2.2",
    "python-dotenv>=1.0",
    "requests>=2.32",
    "requests-oauthlib>=2.0",
    "rich>=13.7",
]

[project.scripts]
mktstatus = "esi_markets:main"
setup-esi = "setup:main"
esi = "esi_markets:main"
esi-setup = "setup:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
