[project]
name = "esimarket-tool"
version = "0.2.0"
description = "ESI Structure Market Tools for Eve Online"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "gspread>=6.2.1",
    "numpy>=2.2",
    "oauthlib>=3.2",
    "pandas>=2.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.0",
    "requests>=2.32",
    "requests-oauthlib>=2.0",
    "rich>=13.7",
]

[project.scripts]
mktstatus = "esi_markets:main"
setup-esi = "setup:main"
esi = "esi_markets:main"
esi-setup = "setup:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "esi_markets.py",
    "cli.py",
    "config.py",
    "esi_client.py",
    "cache.py",
    "rate_limiter.py",
    "market_data.py",
    "export.py",
    "get_jita_prices.py",
    "file_cleanup.py",
    "logging_utils.py",
    "ESI_OAUTH_FLOW.py",
    "setup.py",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
